apps/homarr-assets/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homarr
  labels:
    canUseExternalSecrets: "true"
