apps/homarr-assets/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: homarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homarr.x.pmcd.io`)
      kind: Rule
      services:
        - name: homarr
          port: 7575
  tls:
    certResolver: pmcdio
